syntax = "proto3";

package pb;

import "account.proto";

option go_package = "simpletodo/pb";

message UpdateAccountRequest  {
    optional string first_name = 1;
    optional string last_name = 2;
    optional string email = 3;
    string user_name = 4;
    optional string password = 5;
} 

message UpdateAccountResult {
    Account account = 1;
}